for now, only get the current position. Let's do position watching another time (especially given that it ruins battery which people need especially when they want to pee :-p)

--- a/index.html
+++ b/index.html
@@ -119,6 +119,7 @@
         </style>
 
         <script>
+            // MDN polyfill https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Math/hypot#Polyfill
             if (!Math.hypot) {
                 Math.hypot = function hypot() {
                     var y = 0;
