display time and distance, zoom fit

--- a/index.html
+++ b/index.html
@@ -116,6 +116,10 @@
             background-color: black;
         }
 
+        .infos{
+            background-color: white;
+        }
+
         </style>
         
         <script defer src="app.js"></script>
