--- a/index.html
+++ b/index.html
@@ -128,9 +128,7 @@
             color:white;
             font-family: Arial,sans-serif;
             border-radius: 10%;
-            background-color: white;
-            background: #444;
-            background: linear-gradient( #555, #2C2C2C);
+            background: linear-gradient( rgba(85, 85, 85, 0.6), #2C2C2C);
             position: relative;
         }
 
@@ -148,14 +146,30 @@
             margin-left: -15px;
         }
 
+        .infos.first{
+            background: linear-gradient( rgba(0, 82, 0, 0.6), #2C2C2C);
+        }
+
         .subInfos{
             font-size: 0.6em;
             font-style: italic;
         }
 
+        .route{
+            opacity: 0.5;
+        }
+
+        .route.first{
+            opacity: 1;
+        }
+
         </style>
-        
+
+        <!--<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+        <link rel="stylesheet" href="css/leaflet.awesome-markers.css">-->
+
         <script defer src="app.js"></script>
+        <!--<script src="js/leaflet.awesome-markers.min.js"></script>-->
         <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
         
         <title> Toilettes Bordeaux </title>
