--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
         .icon{
             /*width: 2em;
             height: 2em;*/
-            background-color: white;
-            border-radius: 50%;
+            /*background-color: white;*/
+            /*border-radius: 50%;*/
 
         }
 
@@ -110,11 +110,19 @@
         .icon.handicap{
             border: 3px black solid;
         }
+        .fa {
+            color: red;
+        }
+
+        .fa-ul {
+            list-style-type: none;
+        }
+        .fa-ul li {
+            display: inline-block;
+        }
 
         .icon.user{
-            width: 1em;
-            height: 1em;
-            background-color: black;
+            background-color: red;
         }
 
         .infos{
@@ -166,11 +174,9 @@
 
         </style>
 
-        <!--<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
-        <link rel="stylesheet" href="css/leaflet.awesome-markers.css">-->
+        <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
 
         <script defer src="app.js"></script>
-        <!--<script src="js/leaflet.awesome-markers.min.js"></script>-->
         <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
         
         <title> Toilettes Bordeaux </title>
