--- a/index.html
+++ b/index.html
@@ -110,15 +110,41 @@
         .icon.handicap{
             border: 3px black solid;
         }
+
         .fa {
-            color: red;
+            /*color: black;
+            background-color: white;
+            border: 2px solid black;*/
+            /*width: 25px;
+            height: 25px;*/
+            border-radius: 10%;
+            display: inline;
+        }
+/*
+        i.fa.fa-female:before{
+            margin: auto;
+            width: 30px;
+            height: 30px;
+        }*/
+
+        /*.fa-female {
+            color: purple;
         }
 
-        .fa-ul {
-            list-style-type: none;
+        .fa-male {
+            color: gray;
         }
-        .fa-ul li {
-            display: inline-block;
+
+        .fa-wheelchair {
+            color: blue;
+        }*/
+
+        .icon-box {
+            width: auto;
+            font-size: 2em;
+            /*border: 1px solid black;
+            background-color: black;
+            border-radius: 50%;*/
         }
 
         .icon.user{
