somewhere near ok-design

--- a/index.html
+++ b/index.html
@@ -83,72 +83,64 @@
             width: 100vw;
         }
         
-        .icon{
-            /*width: 2em;
-            height: 2em;*/
-            /*background-color: white;*/
-            /*border-radius: 50%;*/
 
-        }
-
-        .icon.urinoir{
-            background-color: yellow;
-        }
-
-        .icon.sanitaire{
-            background-color: blue;
-        }
-
-        .icon.chalet{
-            background-color: red;
-        }
-
-        .icon.sanitaire.urinoir{
-            background-color: green;
-        }
-
-        .icon.handicap{
-            border: 3px black solid;
-        }
-
-        .fa {
-            /*color: black;
-            background-color: white;
-            border: 2px solid black;*/
-            /*width: 25px;
-            height: 25px;*/
-            border-radius: 10%;
-            display: inline;
-        }
-/*
-        i.fa.fa-female:before{
-            margin: auto;
-            width: 30px;
-            height: 30px;
-        }*/
-
-        /*.fa-female {
-            color: purple;
+        .fa-female {
+            position: absolute;
+            top: 7px;
+            left: 3px;
+            color: pink;
         }
 
         .fa-male {
-            color: gray;
+            position: absolute;
+            top: 7px;
+            right: 3px;
+            color: blue;
+        }
+
+        .fa-male.urinoir {
+            left: 14px;
         }
 
         .fa-wheelchair {
-            color: blue;
-        }*/
+            color: white;
+            position: absolute;
+            left: 3px;
+            top: 3px;
+        }
+
+        .fa-bullseye{
+            color: green;
+        }
+
+        .fa-circle {
+            color: white;
+        }
 
         .icon-box {
-            width: auto;
-            font-size: 2em;
-            /*border: 1px solid black;
-            background-color: black;
-            border-radius: 50%;*/
+            position: relative;
+            width: 46px;
+            height: 46px;
+            font-size: 2.5em;
+            border: 1px solid black;
+            background-color: white;
+            border-radius: 10%;
         }
 
         .icon.user{
             background-color: red;
+        }
+
+        .pins {
+            width: 20px;
+            height: 20px;
+            font-size: 0.43em;
+            font-weight: bold;
+            background-color: blue;
+            border-radius: 50%;
+            position: absolute;
+            top: -10px;
+            right: -10px;
         }
 
         .infos{
