--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
     <head>
         <meta charset="utf-8">
 
+        <meta name="description" content="Une envie pressante à Bordeaux ? Cette page vous indiquera les toilettes les plus proches.">
+        
         <style>
             /*
             http://www.paulirish.com/2012/box-sizing-border-box-ftw/
@@ -242,6 +244,7 @@
         <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
 
         <script>
+            // https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Math/hypot
             if (!Math.hypot) {
                 Math.hypot = function hypot() {
                     var y = 0;
