--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
     <head>
         <meta charset="utf-8">
 
+        
+        <meta name="apple-mobile-web-app-capable" content="yes">
+        <meta name="mobile-web-app-capable" content="yes">
+        
         <style>
             /*
             http://www.paulirish.com/2012/box-sizing-border-box-ftw/
