--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
     <head>
         <meta charset="utf-8">
 
+        <meta name="description" content="Une envie pressante à Bordeaux ? Cette page vous indiquera les toilettes les plus proches. Basé sur les données Open Data de la Ville de Bordeaux.">
+        
         <style>
             /*
             http://www.paulirish.com/2012/box-sizing-border-box-ftw/
