appify webpage on iOS and Android

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
 
         <meta name="description" content="Une envie pressante à Bordeaux ? Cette page vous indiquera les toilettes les plus proches. Basé sur les données Open Data de la Ville de Bordeaux.">
         
+        <meta name="apple-mobile-web-app-capable" content="yes">
+        <meta name="mobile-web-app-capable" content="yes">
+        
         <style>
             /*
             http://www.paulirish.com/2012/box-sizing-border-box-ftw/
