--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
         <meta name="apple-mobile-web-app-capable" content="yes">
         <meta name="mobile-web-app-capable" content="yes">
         
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        
         <style>
             /*
             http://www.paulirish.com/2012/box-sizing-border-box-ftw/
