added favicon and touchIcons

--- a/index.html
+++ b/index.html
@@ -297,6 +297,10 @@ a&&"resolve"in a.Promise&&"reject"in a.Promise&&"all"in a.Promise&&"race"in a.Pr
         <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
 
         <title> Toilettes Bordeaux </title>
+        <link href="logos/favicon2.ico" rel="shortcut icon" type="image/x-icon" />
+        <link rel="apple-touch-icon" href="logos/logo_57.png"/>
+        <link rel="apple-touch-icon" sizes="72x72" href="logos/logo_72.png"/>
+        <link rel="apple-touch-icon" sizes="114x114" href="logos/logo_114.png" />
     </head>
 
     <body>
